--- a/index.html
+++ b/index.html
@@ -419,7 +419,16 @@
 			</div>
 		</div>
 
-
+<!-- Footer section -->
+<div class="footer-section black-background">
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<p class="copy-right">2019 &copy; Hallmark Group. All right reserved</p>
+		</div>
+	</div>
+</div>
+</div>
 	</section>
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
