added the navigation toggle

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 				</div>
 			</div>
 		</div>
-		<header class="main-hearder">
+		<header class="main-header">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
-					<a class="navbar-brand" href="#">HallMark</a>
+					<a class="navbar-brand" href="#">HallMarkGroup</a>
 					  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     					<span class="navbar-toggler-icon"></span>
   					</button>
 
   					<div class="collapse navbar-collapse" id="navbarSupportedContent">
   						<ul class="navbar-nav ml-auto">
-  							<li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-  							<li class="nav-item"><a class="nav-link" href="#">About</a></li>
-  							<li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+  							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+  							<li class="nav-item"><a class="nav-link" href="/pages/about-us.html">About</a></li>
+  							<li class="nav-item"><a class="nav-link" href="/pages/services.html">Services</a></li>
   							<li class="nav-item"><a class="nav-link" href="#">Products</a></li>
   							<li class="nav-item"><a class="nav-link" href="#">Clients</a></li>
   							<li class="nav-item"><a class="nav-link" href="#">Resources</a></li>
@@ -59,6 +59,7 @@
 		</header>
 
 	</div>
+	<!-- banner Section -->
 	<section class="banner-section">
 		
 	</section>
@@ -386,32 +387,35 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<div class="card blog-card">
+						<div class="card blog-card mb-3">
 							<img src="./img/blog/startkit.jpg" class="card-img-top" alt="">
 							<div class="card-body">
 								<h5 class="card-title"><a href="#">First Blog Post</a></h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
 								<a href="#" class="read-more">Read More <i class="fa fa-angle-double-rightgit"></i></a>
+								<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
-						<div class="card blog-card">
+						<div class="card blog-card mb-3">
 							<img src="./img/blog/startkit.jpg" class="card-img-top" alt="">
 							<div class="card-body">
 								<h5 class="card-title"><a href="#">First Blog Post</a></h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
 								<a href="#" class="read-more">Read More <i class="fa fa-angle-double-right"></i></a>
+								<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
-						<div class="card blog-card">
+						<div class="card blog-card mb-3">
 							<img src="./img/blog/startkit.jpg" class="card-img-top" alt="">
 							<div class="card-body">
 								<h5 class="card-title"><a href="#">First Blog Post</a></h5>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
 								<a href="#" class="read-more">Read More <i class="fa fa-angle-double-right"></i></a>
+								<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 							</div>
 						</div>
 					</div>
@@ -429,7 +433,7 @@
 	</div>
 </div>
 </div>
-	</section>
+</section>
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
