added the slider to the banner section

--- a/index.html
+++ b/index.html
@@ -61,9 +61,71 @@
 	</div>
 	<!-- banner Section -->
 	<section class="banner-section">
-		
+		<div id="minimal-bootstrap-carousel" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+			  <div class="carousel-item  item active" data-interval="7000" style="background:url('../img/refinery.jpg'); background-position:center center; background-size:cover; ">
+				<div class="carousel-caption">
+					<div class="container">
+						<div class="box valign-middle">
+							<div class="content">
+								<div class="main-banner-content" data-animation="animated fadeInUp">
+									<h3 class="head-title">We provide the best</h3>
+									<h1 class="text-light">Scaffolding</h1>
+									<p class="text text-light">Hallmark provides consultancy in Scaffolding Access<br/> i.e. Scaffolding Engineering, Estimation, Inspection and Supply. </p>
+									<a href="#" class="theme-btn btn-style-one">Read More</a>
+                                    <a href="#" class="theme-btn btn-style-two">Enquire</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			  </div>
+			  <div class="carousel-item item" data-interval="7000" style="background:url('../img/rig.jpg'); background-position:center center; background-size:cover; ">
+				<div class="carousel-caption">
+					<div class="container">
+						<div class="box valign-middle">
+							<div class="content">
+								<div class="main-banner-content" data-animation="animated fadeInUp">
+									<h3 class="head-title">We provide the best</h3>
+									<h1 class="text-light">Pipeline Repair</h1>
+									<p class="text text-light">Hallmark provides consultancy in Scaffolding Access<br/> i.e. Scaffolding Engineering, Estimation, Inspection and Supply. </p>
+									<a href="#" class="theme-btn btn-style-one">Read More</a>
+                                    <a href="#" class="theme-btn btn-style-two">Enquire</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			  </div>
+			  <div class="carousel-item item" data-interval="7000"  style="background:url('../img/scaffolding.jpg'); background-position:center center; background-size:cover; ">
+				<div class="carousel-caption">
+					<div class="container">
+						<div class="box valign-middle">
+							<div class="content">
+								<div class="main-banner-content" data-animation="animated fadeInUp">
+									<h3 class="head-title">We provide the best</h3>
+									<h1 class="text-light">Training</h1>
+									<p class="text text-light">Hallmark provides consultancy in Scaffolding Access<br/> i.e. Scaffolding Engineering, Estimation, Inspection and Supply. </p>
+									<a href="#" class="theme-btn btn-style-one">Read More</a>
+                                    <a href="#" class="theme-btn btn-style-two">Enquire</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			  </div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Next</span>
+			</a>
+		  </div>
 	</section>
-
+<div class="clearfix"></div>
 	<!-- main Section starts here  -->
 	<section class="main-body padding-top">
 		<div class="container padding-bottom">
